# Offrii

./: .env.example  .gitignore  LICENSE  README.md  Taskfile.yml  client_202098498067-2u5uv8magektgh8ualmdo413naqnftem.apps.googleusercontent.com.plist  dev.sh  docker-compose.dev.yml  docker-compose.local-monitoring.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  offrii-vision-specs-v2.docx
.githooks/: pre-commit
.github/: dependabot.yml
UI design proto/: offrii-prototype.jsx
ai-agent-guidelines/: README.md
ai-agent-guidelines-main/: CLAUDE.md
appstore-screenshots/: APP_STORE_LISTING.md
backend/: Cargo.toml  Dockerfile  Dockerfile.dev  docker-entrypoint.sh  jwt-keys
backend/.config/: nextest.toml
backend/crates/api/: Cargo.toml
backend/crates/api/src/: main.rs
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs
backend/crates/infra/: Cargo.toml
backend/crates/infra/src/: lib.rs
backend/migrations/: 0001_create_enums.sql  0002_create_tables.sql  0003_create_indexes.sql  0004_seed_test_data.sql
backend/rest-api/: Cargo.toml
backend/rest-api/fixtures/: README.md  dev_seed.sql
backend/rest-api/migrations/: 20260304000001_create_users.down.sql  20260304000001_create_users.up.sql  20260304000002_create_categories.down.sql  20260304000002_create_categories.up.sql  20260304000003_create_items.down.sql  20260304000003_create_items.up.sql  20260304000004_create_push_tokens.up.sql  20260304000005_create_circles.down.sql  20260304000005_create_circles.up.sql  20260304000006_seed_default_categories.down.sql  20260304000006_seed_default_categories.up.sql  20260304000007_add_items_improvements.down.sql  20260304000007_add_items_improvements.up.sql  20260304000008_create_refresh_tokens.down.sql  20260304000008_create_refresh_tokens.up.sql  20260304000009_add_circle_owner_member.down.sql  20260304000009_add_circle_owner_member.up.sql  20260307000001_add_user_timezone_and_reminder_opt_out.down.sql  20260307000001_add_user_timezone_and_reminder_opt_out.up.sql  20260307000002_add_user_token_version.up.sql  20260308000001_add_item_claim_tracking.down.sql  20260308000001_add_item_claim_tracking.up.sql  20260309000001_create_share_links.down.sql  20260309000001_create_share_links.up.sql  20260309000002_add_username.down.sql  20260309000002_add_username.up.sql  20260309000003_drop_redundant_index.down.sql  20260309000003_drop_redundant_index.up.sql  20260310000001_enhance_share_links.down.sql  20260310000001_enhance_share_links.up.sql  20260311000001_add_circles_is_direct.down.sql  20260311000001_add_circles_is_direct.up.sql  20260311000002_create_circle_invites.down.sql  20260311000002_create_circle_invites.up.sql  20260311000003_create_circle_items_and_events.down.sql  20260311000003_create_circle_items_and_events.up.sql  20260312000001_create_friendships.up.sql  20260312000002_add_cancelled_status.down.sql  20260312000002_add_cancelled_status.up.sql  20260312000003_add_sent_requests_index.down.sql  (+82 more)
backend/rest-api/scripts/: reseed.sh  seed_demo.sh
backend/rest-api/src/: lib.rs  main.rs  openapi.rs  traits.rs
backend/rest-api/src/config/: app.rs  database.rs
backend/rest-api/src/dto/: auth.rs  categories.rs  circles.rs  community_wishes.rs  friends.rs  health.rs  items.rs  mod.rs  notifications.rs  pagination.rs  push_tokens.rs  share_links.rs  users.rs  wish_messages.rs
backend/rest-api/src/errors/: app_error.rs
backend/rest-api/src/handlers/: admin.rs  auth.rs  categories.rs  circles.rs  community_wishes.rs  friends.rs  health.rs  items.rs  legal.rs  mod.rs  notifications.rs  push_tokens.rs  share_links.rs  shared.rs  upload.rs  users.rs  wish_messages.rs
backend/rest-api/src/jobs/: mod.rs  reminder_job.rs  scheduler.rs
backend/rest-api/src/middleware/: auth_extractor.rs  mod.rs
backend/rest-api/src/models/: category.rs  circle.rs  circle_event.rs  circle_item.rs  circle_share_rule.rs  community_wish.rs  friend.rs  item.rs  mod.rs  notification.rs  push_token.rs  refresh_token.rs  share_link.rs  user.rs
backend/rest-api/src/repositories/: category_repo.rs  circle_event_repo.rs  circle_invite_repo.rs  circle_item_repo.rs  circle_member_repo.rs  circle_repo.rs  circle_share_rule_repo.rs  community_wish_repo.rs  friend_repo.rs  item_repo.rs  mod.rs  notification_repo.rs  push_token_repo.rs  refresh_token_repo.rs  share_link_repo.rs  user_repo.rs  wish_message_repo.rs  wish_report_repo.rs
backend/rest-api/src/services/: apns_notification_service.rs  auth_service.rs  category_service.rs  circle_service.rs  community_wish_service.rs  email_service.rs  friend_service.rs  health_check.rs  item_service.rs  mod.rs  moderation_service.rs  oauth_verifier.rs  og_service.rs  push_token_service.rs  reminder_service.rs  share_link_service.rs  token_cache.rs  upload_service.rs  user_service.rs  wish_message_service.rs
backend/rest-api/src/traits/: auth.rs  circles.rs  community.rs  infra.rs  items.rs  mod.rs  notifications.rs  social.rs  users.rs
backend/rest-api/src/utils/: common_passwords.rs  hash.rs  hibp.rs  jwt.rs  link_validation.rs  mod.rs  password_policy.rs  token_hash.rs  username.rs
backend/rest-api/templates/: mentions-legales-en.html  mentions-legales-fr.html  privacy-en.html  privacy-fr.html  privacy.html  terms-en.html  terms-fr.html  terms.html
backend/rest-api/tests/: auth_tests.rs  category_tests.rs  circle_event_wiring_tests.rs  circle_tests.rs  community_wish_tests.rs  connection_log_tests.rs  curl_battery.sh  email_change_tests.rs  friend_tests.rs  item_tests.rs  migration_tests.rs  notification_tests.rs  push_token_tests.rs  reminder_job_tests.rs  share_link_tests.rs  smoke_tests.rs  spy_notification_tests.rs  user_tests.rs  web_claim_tests.rs  wish_message_tests.rs
backend/rest-api/tests/common/: mod.rs
backend/scripts/: init-dev-db.sh
backend/seeds/: test_data.sql
claudedocs/: DEMO.md  DEV-5-rapport-migrations.md  backend-reference.md  ci-speedup-research.md  circles-roadmap.md  entraide-refonte.md  entraide-ux-research.md  openapi.yaml  (+6 more)
(+352 files in other folders)
