[workspace]
members = ["rest-api"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = { level = "deny", priority = -10 }
unused = { level = "deny", priority = -1 }
unused_variables = { level = "deny" }

[workspace.dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
jsonwebtoken = "9"
rand_core = { version = "0.6", features = ["getrandom"] }
redis = { version = "1.0", features = ["tokio-comp"] }
rsa = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "migrate", "chrono"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
