[workspace]
members = ["rest-api"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = { level = "forbid", priority = -10 }
unused = { level = "deny", priority = -1 }
unused_variables = { level = "deny" }

[workspace.dependencies]
a2 = "0.10"
anyhow = "1.0"
argon2 = "0.5"
async-trait = "0.1"
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.65"
axum = "0.8"
axum-extra = { version = "0.10", features = ["multipart"] }
axum-prometheus = "0.10"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
dotenvy = "0.15"
futures = "0.3"
http-body-util = "0.1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp"] }
jsonwebtoken = "9"
kamadak-exif = "0.5"
metrics = "0.24"
rand = "0.9"
rand_core = { version = "0.6", features = ["getrandom"] }
redis = { version = "1.0", features = ["tokio-comp"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
resend-rs = { version = "0.8", default-features = false, features = ["rustls-tls"] }
rsa = "0.9"
rust_decimal = { version = "1", features = ["serde-with-str"] }
scraper = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "migrate", "chrono", "rust_decimal"] }
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-cron-scheduler = "0.13"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
url = "2"
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }
validator = { version = "0.20", features = ["derive"] }
webp = "0.3"
wiremock = "0.6"
