[package]
name = "rest-api"
version.workspace = true
edition.workspace = true

[lib]
name = "rest_api"
path = "src/lib.rs"

[[bin]]
name = "rest-api"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
anyhow.workspace = true
argon2.workspace = true
axum.workspace = true
chrono.workspace = true
dotenvy.workspace = true
jsonwebtoken.workspace = true
rand_core.workspace = true
redis.workspace = true
rsa.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
http-body-util = "0.1"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
