[package]
name = "rest-api"
version.workspace = true
edition.workspace = true

[lib]
name = "rest_api"
path = "src/lib.rs"

[[bin]]
name = "rest-api"
path = "src/main.rs"

[[bin]]
name = "migrate"
path = "src/bin/migrate.rs"

[dependencies]
a2.workspace = true
anyhow.workspace = true
argon2.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-s3.workspace = true
axum.workspace = true
axum-extra = { version = "0.10", features = ["multipart"] }
chrono.workspace = true
chrono-tz.workspace = true
dotenvy.workspace = true
futures.workspace = true
image.workspace = true
kamadak-exif.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
rand_core.workspace = true
redis.workspace = true
reqwest.workspace = true
resend-rs.workspace = true
rsa.workspace = true
rust_decimal.workspace = true
scraper.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-cron-scheduler.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
url.workspace = true
uuid.workspace = true
validator.workspace = true
webp.workspace = true

[dev-dependencies]
http-body-util = "0.1"
testcontainers = "0.27"
testcontainers-modules = { version = "0.15", features = ["postgres", "redis"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
wiremock = "0.6"

[lints]
workspace = true
